--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+logo: https://www.pngkey.com/png/detail/635-6359089_dna-clipart-dna-nucleic-acid-double-helix-clip.png
+title: "Bioinformatics"
