--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-logo: https://www.pngkey.com/png/detail/635-6359089_dna-clipart-dna-nucleic-acid-double-helix-clip.png
+logo: https://www.clipartkey.com/mpngs/m/225-2253298_transparent-background-dna-clipart.png
 title: "Bioinformatics"
